# nast_hpx

./: .gitignore  CMakeLists.txt  README.md  input.xml  wirbel.xml  wirbel_geometrie_orig.csv
examples/: bead_pack_1024_1024.xml  bead_pack_4096_4096.xml  driven.xml  driven_cavity_1024_1024.xml  driven_cavity_1144_1144.xml  driven_cavity_1256_1256.xml  driven_cavity_128_128.xml  driven_cavity_16_16.xml  driven_cavity_4048_4048.xml  driven_cavity_5040_5040.xml  driven_cavity_5056_5056.xml  driven_cavity_512_512.xml  driven_cavity_724_724.xml  driven_cavity_884_884.xml  junction_52_52.xml  junction_s_shape_52_52.xml  step.xml  step_22_102.xml  step_512_128.xml  step_7560_2520.xml  step_7584_2528.xml  step_initial_uv.csv  temperature_driven_64_64.xml  temperature_driven_64_64_2.xml  uniform_rect_256_256.xml  uniform_rect_4096_4096.xml  uniform_rect_5040_5040.xml  uniform_rect_5056_5056.xml  uniform_rect_512_512.xml
examples/geometry/: bead_pack_1024_1024.csv  driven_cavity_1024_1024.csv  driven_cavity_1144_1144.csv  driven_cavity_128_128.csv  driven_cavity_16_16.csv  driven_cavity_512_512.csv  driven_cavity_724_724.csv  driven_cavity_884_884.csv  junction_52_52.csv  junction_s_shape_52_52.csv  step_512_128.csv  uniform_rect_256_256.csv  uniform_rect_512_512.csv
examples/geometry_orig/: bead_pack_1024_1024.csv  driven_cavity_1024_1024.csv  driven_cavity_1144_1144.csv  driven_cavity_1256_1256.csv  driven_cavity_16_16.csv  driven_cavity_724_724.csv  driven_cavity_884_884.csv  junction_52_52.csv  junction_s_shape_52_52.csv  step_512_128.csv  temperature_driven_64_64.csv  uniform_rect_256_256.csv  uniform_rect_512_512.csv
settings/: .~lock.junction_geometrie_orig.csv#  driven_cavity.xml  driven_cavity2.xml  driven_cavity2_geometrie.csv  driven_cavity2_geometrie_orig.csv  driven_cavity_geometrie.csv  driven_cavity_geometrie_orig.csv  junction.xml  junction2.xml  junction2_geometrie.csv  junction2_geometrie_orig.csv  junction_geometrie.csv  junction_geometrie_orig.csv  kugel.xml  kugel_geometrie.csv  kugel_geometrie_orig.csv  kugel_re100.xml  kugel_re20.xml  stufe.xml  stufe_geometrie.csv  stufe_geometrie_orig.csv  temperature_driven.xml  temperature_driven2.xml  temperature_driven_geometrie.csv  wirbel.xml  wirbel_geometrie.csv
src/: debug.cpp  junk  main.cpp  nast_hpx.cpp
src/computation/: cell_operations.cpp  cell_operations.hpp  custom_grain_size.cpp  custom_grain_size.hpp  parameters.hpp  stencils.hpp  strategy.hpp  with_for_each.cpp  with_for_each.hpp
src/grid/: boundary_condition.hpp  boundary_data.hpp  cell.hpp  direction.hpp  fd_stencils.hpp  pack_buffer.hpp  partition.hpp  partition_data.hpp  recv_buffer.hpp  send_buffer.hpp  stencils.hpp  types.hpp  unpack_buffer.hpp
src/internal/: cfd_config.hpp  types.hpp  utils.hpp
src/io/: config.cpp  config.hpp  config_reader.cpp  config_reader.hpp  io.hpp  manager.cpp  manager.hpp  vtk_writer.hpp  writer.cpp  writer.hpp
src/solver/: custom_chunk_solver.cpp  custom_chunk_solver.hpp  parameters.hpp  solver.hpp
src/stepper/: fd_stepper.cpp  fd_stepper.hpp  stencils.hpp  stepper.hpp
src/util/: array_deleter.hpp  boundary_data.hpp  cancellation_token.hpp  cell.hpp  defines.hpp  derivatives.hpp  (+7 more)
tests/: test_cgs_compute_fg.cpp  test_cgs_compute_rhs.cpp  test_cgs_set_pressure_on_boundary.cpp  test_cgs_set_velocity_on_boundary.cpp  test_cgs_sor_cycle.cpp  test_cgs_update_velocities.cpp  test_custom_grain_size.cpp  test_get_neighbor_cell.cpp  test_helpers.hpp  test_partition.cpp  test_partition_data.cpp  test_wfe_compute_fg.cpp  test_wfe_compute_rhs.cpp  test_wfe_set_pressure_on_boundary.cpp  test_wfe_set_velocity_on_boundary.cpp  test_wfe_sor_cycle.cpp  test_wfe_update_velocities.cpp
tools/: 3d_grid.py  convert_grid.py  convert_grid_mpi.py  convert_mpi.py  density.py  grid.py  grid_converter.py  grid_to_image.py  image_to_grid.py  make_3d.py  make_and_convert.sh  pipes.py  plot.py  plot_multiple.py  random_bead_pack.py  rectangular_grid_maker.py  step.py
(+34 files in other folders)
